[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/interfaces/Fields/ComplexField.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/PT-Bold_16.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/PT-Italic_16.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/textures/icons/tooltip_info.png" type="Texture" id=4]

[node name="ComplexField" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1920.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="Title" type="Label" parent="HBoxContainer"]
margin_right = 8.0
margin_bottom = 30.0
custom_constants/shadow_offset_y = 0
custom_fonts/font = ExtResource( 2 )

[node name="TooltipTextureRect" type="TextureRect" parent="HBoxContainer"]
visible = false
modulate = Color( 0.654902, 0.67451, 0.713726, 1 )
margin_left = 91.0
margin_right = 107.0
margin_bottom = 30.0
texture = ExtResource( 4 )
stretch_mode = 6

[node name="Error" type="Label" parent="HBoxContainer"]
margin_left = 8.0
margin_right = 16.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0.737255, 0.203922, 0.203922, 1 )
custom_fonts/font = ExtResource( 3 )

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_top = 34.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="Control" parent="HBoxContainer2"]
margin_bottom = 1046.0

[connection signal="mouse_entered" from="HBoxContainer/TooltipTextureRect" to="." method="_on_TooltipTextureRect_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/TooltipTextureRect" to="." method="_on_TooltipTextureRect_mouse_exited"]
